--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,11 @@
 	<classpathentry kind="var" path="opencv" sourcepath="opencv.sources"/>
 	<classpathentry kind="var" path="cscore" sourcepath="cscore.sources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="var" path="USERLIBS_DIR/CTRLib.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/CTRLib.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/JBC218/wpilib/user/java/src/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="var" path="USERLIBS_DIR/opencsv-3.8-sources.jar"/>
 	<classpathentry kind="var" path="USERLIBS_DIR/opencsv-3.8.jar"/>
 	<classpathentry kind="var" path="USERLIBS_DIR/navx_frc.jar"/>
