--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,8 @@
 	<classpathentry kind="var" path="opencv" sourcepath="opencv.sources"/>
 	<classpathentry kind="var" path="cscore" sourcepath="cscore.sources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ProtoBuffers"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/zeromq"/>
 	<classpathentry kind="var" path="USERLIBS_DIR/CTRLib.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/C:/Users/JBC218/wpilib/user/java/src/"/>
